# pyesbm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: clustering_example.ipynb  covariates_example.ipynb  full_workflow_example.ipynb
pyesbm/: __init__.py  baseline.py  covariates.py  esbm_config.py  likelihoods.py  model.py  priors.py
pyesbm/utilities/: __init__.py  cluster_processor.py  data_generation.py  matrix_operations.py  misc_functs.py  numba_functions.py  plotting_functions.py  valid_functs.py  vi_functs.py
src/: covariates.py  esbm_config.py  likelihoods.py  model.py
src/utilities/: data_generation.py  matrix_operations.py  plotting_functions.py
tests/: test_data_generation.py  test_individual_functions.py  test_integration.py  test_likelihoods.py  test_models_init.py  test_priors.py  test_sampling_scheme.py
